2006-XX-XX  Albert Chu  <chu11@llnl.gov>

	* src/libs/include/cerebro/cerebro_metric_module.h,
	src/libs/modules/, src/modules/metric/: Support new
	metric module flags.

	* src/cerebrod/cerebrod_speaker_data.c,
	src/libs/include/cerebro/cerebro_metric_module.h: Alter method by
	which metric module threads are used.  Metric module threads now
	send heartbeats when data changes, they don't signal cerebro that
	data is simply updated.

	* src/modules/metric/cerebro_metric_slurm_state.c
	(_send_heartbeat,
	slurm_state_metric_send_heartbeat_function_pointer): New function.

	* src/modules/metric/cerebro_metric_slurm_state.c
	(slurm_state_metric_thread): Send heartbeat on state change.

	* src/cerebrod/cerebrod_speaker_data.c,
	src/cerebrod/cerebrod_speaker.h, src/cerebrod/cerebrod_speaker.c:
	Support metric module flags and possibility metric modules may not
	send data via heartbeats.
	
2006-11-11  Albert Chu  <chu11@llnl.gov>

	* src/modules/metric/cerebro_metric_common.h,
	src/modules/metric/cerebro_metric_common.c: New files.

	* src/modules/metric/: Adjust to use new common functions.
	
2006-11-10  Albert Chu  <chu11@llnl.gov>

	* src/cerebrod/, src/libs, src/cerbro-admin/,
	man/cerebro-admin.8.in: Support new 'send-now' functionality for
	updated metrics.  Adjust code appropriately to support new feature
	and make code cleaner.

2006-11-10  Albert Chu  <chu11@llnl.gov>

	* src/libs/cerebro/cerebro_metric_util.c
	(_cerebro_metric_get_data): Fix config parse bug.

2006-11-09  Albert Chu  <chu11@llnl.gov>

	* src/cerebro-stat/cerebro-stat.c, man/cerebro-stat.8.in: Adjust
	wording so "metric server" refers to a "metric server" or "event
	server".

	* src/cerebrod/cerebrod_event_server.h,
	src/cerebrod/cerebrod_event.c, src/libs/include/cerebro.h,
	src/libs/include/cerebro/cerebro_event_protocol.h,
	src/libs/cerebro/cerebro_event.c, src/cerebro-stat/cerebro-stat.c:
	Support 'event_names' retrieval.  Includes modification to